--- a/index.html
+++ b/index.html
@@ -18,18 +18,22 @@
     <div>
         <h1>Simulador de Cuotas</h1>
     </div>
+    <div id="explicacion"></div>
     <div class="mb-3 formulario">
         <label for="exampleFormControlInput1" class="form-label">Monto de la compra</label>
-        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="ingrese el monto de su compra">
+        <input type="number" class="form-control" id="monto-compra" placeholder="ingrese el monto de su compra">
         <br>
         <label for="exampleFormControlInput1" class="form-label">Cantidad de cuotas</label>
-        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="ingrese la cantidad de cuotas a pagar">
+        <input type="number" class="form-control" id="cuotas" placeholder="ingrese la cantidad de cuotas a pagar">
         <br>
         <label for="exampleFormControlInput1" class="form-label">Alícuota de IVA</label>
-        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="ingrese la alícuota de IVA correspondiente (21, 10.5 o 0)">
+        <input type="number" class="form-control" id="alicuota" placeholder="ingrese la alícuota de IVA correspondiente (21, 10.5 o 0)">
     </div>
     <div class="boton">
         <button type="button" class="btn btn-primary">Calcular</button>
+    </div>
+    <div>
+      <p id="resultadoTotal"></p>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
